--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
-
 img {
     width: 100%;
+}
+
+button {
+    background-color: lightblue;
 }
 
 .nav-bar {
@@ -19,4 +22,18 @@ img {
 
 .product-image {
     width: 200px;
+}
+
+.color-box {
+    width: 40px;
+    height: 40px;
+    margin-top: 5px;
+}
+
+.disabledButton {
+    background-color: #d8d8d8;
+}
+
+.outOfStock {
+    text-decoration: line-through;
 }
