--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@ img {
 }
 
 button {
-    background-color: lightblue;
+    background-color: rgb(13, 121, 158);
+    color: rgb(255, 255, 255);
 }
 
 .nav-bar {
